SRP and DI improved

--- a/Blog/BlogApp/Views/Users/Login.cshtml
+++ b/Blog/BlogApp/Views/Users/Login.cshtml
@@ -11,7 +11,9 @@
         <label asp-for="Password">Parola</label>
         <input type="password" class="form-control form-control-lg mt-2" asp-for = "Password" placeholder="Parola">
     </div>
-
+    
     <button type="submit" class="btn btn-dark mt-3">Giriş Yap</button>
+    <a asp-action="ForgotPassword" asp-controller="Users" class="btn btn-outline-dark mt-3"> Şifremi Unuttum</a>    
+    
 </form>
     
